--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -396,7 +396,7 @@ zh-CN:
       order_refund:
         id: 编号
         order_transaction: 订单
-        order_transaction_id: 订单ID
+        order_transaction_id: 订单
         total: 总金额
         state: 状态
         buyer: 买家
