--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -252,6 +252,7 @@ zh-CN:
         updated_at: 更新时间
       topic:
         content: 内容
+        user_id: 用户
       region:
         id: 编号
         name: 名称
