--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -437,6 +437,7 @@ zh-CN:
         money: 金额
         arrive_mode: 到帐时间
         state: 处理状态
+        bank: 银行
       answer_ask_buy:
         price: 价格
         amount: 数量
