--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -360,6 +360,8 @@ zh-CN:
         number: 订单编号
         dispose_date: 接单时间
         transport_type: 发货类型
+        items:
+          shop: ''
         transfers:
           shop_product: 商品
           item:
